# serious-shift-v2

./: .gitignore  ARCHITECTURE.md  CODEOWNERS  DEPLOY-RAILWAY.md  README.md
.github/workflows/: backend.yml  db.yml  frontend.yml  pipeline.yml
apps/backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  fly.toml
apps/backend/src/: main.rs  sql.rs
apps/frontend/: .env.example  README.md  package-lock.json  package.json  postcss.config.mjs
apps/frontend/app/: layout.jsx  page.jsx
apps/frontend/src/: App.jsx  Spa.jsx  index.css
apps/frontend/src/components/: ConsensusDot.jsx  CredScore.jsx  IndustrySelector.jsx  StatusBadge.jsx
apps/frontend/src/design-reference/: App.jsx  Serious Shift.html  components.jsx  layers.jsx  styles.css
apps/frontend/src/hooks/: useData.js  useTheme.js
apps/frontend/src/utils/: text.js
apps/frontend/src/views/: About.jsx  Daily.jsx  Explore.jsx  Keynote.jsx  Leaderboard.jsx  Map.jsx  Predictions.jsx  ThinkerProfile.jsx
apps/pipeline/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.json
apps/pipeline/serious_shift_pipeline/: __init__.py  db.py  deduplicate.py  evaluate.py  generate_keynote.py  generate_map_data.py  ingest.py  observability.py  process_raw.py  queries.py  run_weekly.py  scoring.py  scraper.py  status.py
apps/pipeline/serious_shift_pipeline/core/: __init__.py  config.py  db.py  llm.py  migrate.py  observability.py  parallel.py  voice.py
apps/pipeline/serious_shift_pipeline/migrations/: 0001_initial_schema.sql  0001_schema.sql  0003_more_sources.sql  0005_drop_scenario_layer.sql
apps/pipeline/serious_shift_pipeline/steps/: __init__.py  deduplicate.py  evaluate.py  generate_keynote.py  generate_map_data.py  process_raw.py  scoring.py  scraper.py
apps/pipeline/serious_shift_pipeline/tools/: __init__.py  ingest.py  queries.py  status.py
apps/pipeline/tests/: test_credibility.py  test_db.py  test_generate_keynote_sql.py  test_imports.py  test_migrate.py  test_parallel.py  test_queries_integration.py  test_queries_sql.py  test_scoring.py
(+38 files in other folders)
