[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["serious_shift_pipeline*"]

[tool.setuptools.package-data]
# Vendored DB migrations, applied on startup (see core/migrate.py).
serious_shift_pipeline = ["migrations/*.sql"]

[project]
name = "serious-shift-pipeline"
version = "0.1.0"
description = "Serious Shift ingestion & intelligence pipeline (scrape -> LLM extract -> map/keynote), Postgres-backed."
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.2",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.10",
    "youtube-transcript-api>=1.0",   # instance .fetch() API + proxies module
    "yt-dlp>=2024.1.0",
    "anthropic>=0.40.0",        # Claude API client (extraction + generation)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "sqlglot>=25.0",            # server-free SQL validation (test_queries_sql.py)
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
# E701/E702: terse one-liners (`if x: y`, `a; b`) are used heavily in the
# generator code carried over from the legacy scripts; allow them.
lint.ignore = ["E701", "E702"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
